<resources>
    <string name="app_name">FeelMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">Poster</string>
    <string name="topo">topo</string>
    <string name="wonder_woman_1984">Wonder Woman 1984</string>
    <string name="year_example">2020</string>
    <string name="bullet_point"> • </string>
    <string name="time_example">2h35min</string>
    <string name="aventura">Aventura</string>
    <string name="drama">Drama</string>
    <string name="assista_agora">Assista Agora</string>
    <string name="lorem_ipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt aliquet dui vitae finibus. Nunc gravida dui justo, quis vehicula felis efficitur at. Cras sodales eleifend justo. Pellentesque vitae iaculis arcu. Nam iaculis sagittis tortor, condimentum tempus magna. Fusce quis turpis vel mi efficitur semper sit amet ut neque.</string>
    <string name="o_que_seus_amigos_acharam">O que seus amigos acharam...</string>
    <string name="betty_griffin">Betty Griffin</string>
    <string name="error_default">Erro desconhecido.</string>
    <string name="saved_movies">Salvos</string>
    <string name="watched_movies">Assistidos</string>
    <string name="streaming_services">Meus Serviços de Streamings</string>
    <string name="streamings">Streamings</string>
    <string name="search_movie_title">Escreva o nome de um filme</string>
    <string name="see_all">ver todas</string>
    <string name="select_streaming">Selecione seus serviços de Streaming</string>
    <string name="feed_title">Feed</string>
    <string name="what_your_friends_are_watching">O que seus amigos estão assistindo...</string>
    <string name="on_the_rise">Em Alta</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="follow">+ Seguir</string>
    <string name="followed">Seguindo</string>
    <string name="top_ten">#10 Filmes para ficar</string>
    <string name="save">Salvar</string>
    <string name="skip">Pular</string>
    <string name="facebook_app_id">314667483762502</string>
    <string name="fb_login_protocol_scheme">fb314667483762502</string>
    <string name="hello">Olá!</string>
    <string name="hello_2">Olá,</string>
    <string name="last_watched">Últimos Assistidos</string>
    <string name="facebook_login">Entrar com Facebook</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="review">Avaliações</string>
    <string name="add_friends">Adicione amigos</string>
    <string name="friends_to_feed">Adicione amigos para visualizar as atualizações de seus amigos</string>
    <string name="logout">Sair</string>
    <string name="title_activity_follow_followers">FollowFollowersActivity</string>
    <string name="last">Últimos lançamentos</string>

</resources>