<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:drawableBottom="@drawable/back_button"
            android:layout_marginTop="16dp"
            android:paddingBottom="9dp"
            android:paddingEnd="5dp"
            android:background="@drawable/layout_bg_round"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:background="@drawable/poster"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/gradient"/>

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="50dp"
            android:text="@string/wonder_woman_1984"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="@id/imgPoster"
            app:layout_constraintStart_toStartOf="@id/imgPoster" />

        <TextView
            android:id="@+id/tvMovieReleaseYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/year_example"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvDotSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/bullet_point"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvMovieReleaseYear"
            app:layout_constraintTop_toTopOf="@id/tvMovieReleaseYear" />

        <TextView
            android:id="@+id/tvMovieRuntime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_example"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/tvDotSpace"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
            app:layout_constraintTop_toTopOf="@id/tvMovieReleaseYear" />

        <TextView
            android:id="@+id/tvMovieCategory"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_bg_round"
            android:padding="14dp"
            android:text="@string/aventura"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/imgPoster"
            app:layout_constraintTop_toBottomOf="@id/tvMovieReleaseYear" />

        <TextView
            android:id="@+id/tvMovieCategory2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/layout_bg_round"
            android:padding="14dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/drama"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvMovieCategory"
            app:layout_constraintTop_toBottomOf="@id/tvMovieReleaseYear" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/lorem_ipsun"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/tvMovieCategory" />

        <TextView
            android:id="@+id/tvWatchNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/assista_agora"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/tvMovieDescription" />

        <ImageView
            android:id="@+id/imgNetflix"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/netflix"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="@id/tvWatchNow"
            app:layout_constraintTop_toBottomOf="@id/tvWatchNow" />

        <ImageView
            android:id="@+id/imgDisney"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/disney"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toEndOf="@id/imgNetflix"
            app:layout_constraintTop_toBottomOf="@id/tvWatchNow" />

        <ImageView
            android:id="@+id/imgLooke"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/looke"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toEndOf="@id/imgDisney"
            app:layout_constraintTop_toBottomOf="@id/tvWatchNow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWatch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:drawableBottom="@drawable/watched_button"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:paddingBottom="8dp"
            android:background="@drawable/layout_bg_round"
            app:layout_constraintTop_toBottomOf="@id/tvMovieDescription"
            app:layout_constraintEnd_toStartOf="@id/btSave" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:drawableBottom="@drawable/save_button"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="8dp"
            android:background="@drawable/layout_bg_round"
            app:layout_constraintTop_toBottomOf="@id/tvMovieDescription"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvFriendsComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/o_que_seus_amigos_acharam"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/imgNetflix" />


            <RelativeLayout
                android:id="@+id/rlFeed"
                android:layout_width="0dp"
                android:layout_height="122dp"
                app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
                app:layout_constraintEnd_toEndOf="@id/tvMovieDescription"
                app:layout_constraintTop_toBottomOf="@id/tvFriendsComments"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="17dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/corner_feed"
                >

                <TextView
                    android:id="@+id/tvFriendFeedName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/betty_griffin"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMovieReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvFriendFeedName"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/layout_bg_round"
                    android:padding="9dp"
                    android:text="@string/lorem_ipsun"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>