<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.userProfile.view.UserProfileActivity"
    android:background="@color/primary_color"
    >
    <include
        layout="@layout/loader"
        android:id="@+id/vgLoader" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/vgUserProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include android:id="@+id/vgProfileHeader" layout="@layout/profile_header_component"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_watched_movies"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvWacthed"
                            tools:text="300"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/title_2"
                            />
                        <TextView
                            android:text="@string/watched_movies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/bottom_navigation_text"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal"
                    android:textAlignment="center"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_saved"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvUnWatchedMovies"
                            tools:text="54"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/title_2"
                            />
                        <TextView
                            android:text="@string/saved_movies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/bottom_navigation_text"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_streamings"
                        android:layout_marginRight="10dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvStreamings"
                            tools:text="8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/title_2"
                            />
                        <TextView
                            android:text="@string/streamings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/lato"
                            android:textSize="@dimen/bottom_navigation_text"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textSize="@dimen/title_2"
                app:backgroundTint="@color/white_ten_percent"
                android:background="@drawable/square_rounded_white_gradient"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_watched"
                android:textColor="@color/white"
                android:textSize="@dimen/title_2"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLastWatchedMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/stream_item"
                tools:itemCount="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="@color/white"
                android:textSize="@dimen/title_2"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLastComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/comment_movie_item"
                android:layout_margin="15dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>