<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.profile.view.ProfileFragment"
    android:background="@color/primary_color"
    android:forceDarkAllowed="false"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="9dp"
        android:paddingEnd="5dp"
        android:src="@drawable/ic_back_arrow"
        android:background="@color/white_seventy_percent"
        android:backgroundTint="@color/white_ten_percent"
        app:borderWidth="0dp"
        android:layout_marginStart="16dp"
        app:fabCustomSize="50dp"
        android:layout_gravity="top|left"
        app:elevation="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivFotoLogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_no_profile_picture"
                app:riv_corner_radius="50dp"
                android:layout_weight="0.35"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical"
                android:layout_weight="0.65">
                <TextView
                    android:id="@+id/tvNomeLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_2"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="@dimen/title_2"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="25dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="18"
                            android:fontFamily="@font/lato_bold"
                            android:textSize="@dimen/title_2"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textColor="@color/white_seventy_percent"
                            android:textSize="@dimen/normal_text"
                            android:fontFamily="@font/lato"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="18"
                            android:fontFamily="@font/lato_bold"
                            android:textSize="@dimen/title_2"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textColor="@color/white_seventy_percent"
                            android:textSize="@dimen/normal_text"
                            android:fontFamily="@font/lato"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlUserProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:backgroundTint="@color/primary_color"
            app:tabRippleColor="@color/white"
            app:tabTextColor="@color/white"
            app:tabIconTint="@color/white">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_saved"
                android:backgroundTint="@color/white"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_watched_movies"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_streamings"
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_watched_movies"
                />
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpUserProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>